# microbenchmark-rust-async-blocking-io

./: Cargo.toml
src/: main.rs
