[package]
name = "christian-filesystem-workers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.3.9", features = ["help", "usage", "error-context", "derive"] }
ctrlc = "3.4.0"
eventfd = "0.2.0"
flume = "0.10.14"
libc = "0.2.147"
nix = "0.26.2"
rand = "0.8.5"
rio = "0.9.4"
scopeguard = "1.1.0"
timerfd = "1.5.0"
tokio = { version = "1.29.1", features = ["full"] }
tokio-eventfd = "0.2.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[patch.crates-io]
tokio = { git = "https://github.com/problame/tokio.git", branch="problame/distinguish-core-and-worker-by-thread-name" }
rio = { git = "https://github.com/problame/rio",  branch = "problame/hacks-to-make-eventfd-bridge-work"}

[profile.release]
debug = 0
